--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                 <p>Java-backend разработчик</p>
                 <p>Пример моих начинаний на <a href="https://github.com/KirillBordiyan?tab=repositories" target="_blank">GitHub </a></p>
                 <h4>Соцсети, которыми пользуюсь</h4>
-                    <a href="https://t.me/bordiyank">Telegram</a> | 
-                    <a href="https://www.linkedin.com/in/kirill-bordiyan-168274262/">LinkedIn</a>
+                    <a href="https://t.me/bordiyank" target="_blank">Telegram</a> | 
+                    <a href="https://www.linkedin.com/in/kirill-bordiyan-168274262/" target="_blank">LinkedIn</a>
             </div>
         </div>
         
