--- a/BordiyanKirill.html
+++ b/BordiyanKirill.html
@@ -2,20 +2,21 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>resume HTML</title>
+    <title>Bordiyan Kirill</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="full_body">
         <div class="info">
-            <img src="me.png" alt="мое фото" class="photo">
+            <img src="me2.jpg" alt="мое фото" class="photo">
             
             <div class="infotext">
                 <h1>Бордиян Кирилл</h1>
                 <p>23.04.2001</p>
                 <p>Java-backend разработчик</p>
-                <p>Пример моих начинаний на <a href="https://github.com/KirillBordiyan?tab=repositories" target="_blank">GitHub </a></p>
-                <h4>Соцсети, которыми пользуюсь</h4>
+                <br>
+                <p>Мой <a href="https://github.com/KirillBordiyan?tab=repositories" target="_blank">GitHub </a></p>
+                <br>
                     <a href="https://t.me/bordiyank" target="_blank">Telegram</a> | 
                     <a href="https://www.linkedin.com/in/kirill-bordiyan-168274262/" target="_blank">LinkedIn</a>
             </div>
@@ -24,13 +25,16 @@
         <div class="card">
             <h2>Образование:</h2>
             <ul class="list">
-                <h3>Основное:</h3>
                 <h4>Брестский Государственный Технический Университет (BSTU).</h4>
-                <li>Высшее, экономический факультет, специальность логистика.</li>
+                <p>Высшее, экономический факультет, специальность логистика
+                    <br>
+                    2018-2022 гг.
+                    <br>
+                    Обучение онлайн: март 2023 - наст.время, платформа GeekBrains
+                </p>
+                <!-- <li>Высшее, экономический факультет, специальность логистика.</li>
                 <li>2018-2022 гг.</li>
-                <h3>Дополнительное:</h3>
-                <li>Курсы польского языка: октябрь 2021 – февраль 2022, ОЦ "Нью-тон".</li>
-                <li>Обучение онлайн: март 2023 - наст.время, платформа GeekBrains.</li>
+                <li>Обучение онлайн: март 2023 - наст.время, платформа GeekBrains.</li> -->
             </ul>
         </div>
 
@@ -38,25 +42,27 @@
              <h2>Профессиональные навыки в сфере разработки:</h2>
             <ul class="list">
                 <h3>Java 11/17, Maven, ООП</h3>
-                <li>Написание простых консольных приложений на Java с соблюдением SOILID.</li>
+                <p>Консольные приложения <br> Сборка проекта <br> Соблюдение SOLID-принципов</p>
+                <!-- <li>Написание простых консольных приложений на Java с соблюдением SOILID.</li>
                 <li>Cборка проекта с помощью Maven, определение и настойка зависимостей.</li>
-                <li>Соблюдение принципов ООП.</li>
+                <li>Соблюдение принципов ООП.</li> -->
 
                 <h3>JDBC/JPA, SQL</h3>
-                <li>В некоторых проектах (Telegram бот, сайт для заказа еды) использовалось сохранение данных пользователя/заказчика.</li>
+                <p>Использовал БД в проектах tg-бота и веб-сервиса по заказу еды</p>
+                <!-- <li>В некоторых проектах (Telegram бот, сайт для заказа еды) использовалось сохранение данных пользователя/заказчика.</li>
                 <li>В дальнейшей практике (сайт для заказа еды) планируется расширение БД.</li>
                 <li>Диалект MySQL: изучался по курсам на Stepik и самостоятельно.</li>
-                <li>Ознакомлен с PostgreSQL.</li>
+                <li>Ознакомлен с PostgreSQL.</li> -->
 
                 <h3>OS Linux, Docker (Docker Compose, DockerFile).</h3>
-                <li>На основе GNU/Linux изучался Docker, составление DockerFile и настройка Docker Compose для работы нескольких контейнеров.</li>
-                <li>В целом был ознакомлен с темой контейнеризации, управления памяти процессов, правами доступа и управления пакетами.</li>   
-                <li>В контейнерах также настраивал и разворачивал Nginx, Apache2.0, php-fpm.</li>
+                <p>На основе GNU/Linux изучался Docker, составление DockerFile и настройка Docker Compose для работы нескольких контейнеров 
+                <br><br>В контейнерах также настраивал и разворачивал Nginx, Apache2.0, php-fpm.
+                </p>
             </ul>
         </div>
 
         <div class="card">
-            <h2>Источники получения знаний и навыков:</h2>
+            <h2>Источники получения навыков:</h2>
             <ul class="source_list">
                 <li>Крейг Уоллс "Spring in action" (6-е изд, перевод "ДМК Пресс").</li>
                 <li>Статьи JavaRush.</li>
@@ -64,8 +70,6 @@
                 <li>Сайт hackerrank.com</li>
                 <li>Сайт leetcode.com</li>
                 <li>Дополнительно изучаю HTML/CSS.</li>
-                <p>Ранее пробовал себя в языках Python(знакомился с Django в т.ч.), JS (Node.js). <br>
-                    Выполнял алгоритмические задачи, знакомился с взаимодействием классов, изучал ООП.</p>
             </ul>
         </div>    
 
